--- a/fdisk/sfdisk.8
+++ b/fdisk/sfdisk.8
@@ -5,7 +5,7 @@
 .\" -- May be distributed under the GNU General Public License
 .\" The `DRDOS Warning' was taken from a net post by Stephen Tweedie.
 .\"
-.TH SFDISK 8 "1 September 1995" "Linux 1.3.23" "Linux Programmer's Manual"
+.TH SFDISK 8 "1 September 1995" "Linux" "Linux Programmer's Manual"
 .SH NAME
 sfdisk \- Partition table manipulator for Linux
 .SH SYNOPSIS
@@ -158,7 +158,7 @@ and exit immediately.
 .BR \-? " or " \-\-help
 Print a usage message and exit immediately.
 .TP
-.BR \-T " or " \-\-list-types
+.BR \-T " or " \-\-list\-types
 Print the recognized types (system Id's).
 .TP
 .BR \-s " or " \-\-show\-size
@@ -207,7 +207,7 @@ like `/my_equipment/disks/2/5' or so).
 .BI \-A "number"
 Make the indicated partition(s) active, and all others inactive.
 .TP
-.BI \-c " or " \-\-id " number [Id]"
+.BI \-c "\fR or " \-\-id " number [Id]"
 If no Id argument given: print the partition Id of the indicated
 partition. If an Id argument is present: change the type (Id) of
 the indicated partition to the given value.
@@ -265,7 +265,7 @@ Certain Disk Managers and boot loaders (such as OSBS, but not
 LILO or the OS/2 Boot Manager) also live in this empty space,
 so maybe you want this option if you use one.
 .TP
-.BR \-E " or " \-\-DOS-extended
+.BR \-E " or " \-\-DOS\-extended
 Take the starting sector numbers of "inner" extended partitions
 to be relative to the starting cylinder boundary of the outer one,
 (like some versions of DOS do) rather than to the starting sector
@@ -431,6 +431,29 @@ EOF
 .RE
 will partition /dev/hdc just as indicated above.
 
+The command
+.RS
+.nf
+.if t .ft CW
+sfdisk /dev/hdb << EOF
+,3,L
+,60,L
+,19,S
+,,E
+,130,L
+,130,L
+,130,L
+,,L
+EOF
+.if t .ft R
+.fi
+.RE
+will partition /dev/hdb into two Linux partitions of 3 and 60
+cylinders, a swap space of 19 cylinders, and an extended partition
+covering the rest. Inside the extended partition there are four
+Linux logical partitions, three of 130 cylinders and one
+covering the rest.
+
 With the \-x option, the number of input lines must be a multiple of 4:
 you have to list the two empty partitions that you never want
 using two blank lines. Without the \-x option, you give one line
@@ -482,7 +505,7 @@ start of the next partition.  Mind you, as long as I keep a little
 free disk space after any DRDOS partition, I don't have any other
 problems with the two coexisting on the one drive.'
 
-A. V. Le Blanc writes in README.esfdisk: `Dr. DOS 5.0 and 6.0 has been
+A. V. Le Blanc writes in README.efdisk: `Dr. DOS 5.0 and 6.0 has been
 reported to have problems cooperating with Linux, and with this version
 of efdisk in particular.  This efdisk sets the system type
 to hexadecimal 81.  Dr. DOS seems to confuse
