--- a/getopt/Changelog
+++ b/getopt/Changelog
@@ -1,5 +1,15 @@
+20030123: Bumped up version number to 1.1.3
+20030123: Changed WITH_GETTEXT option to WITHOUT_GETTEXT
+20030123: Renamed example programs to have the string getopt- prepended
+20030123: Manpage: all minus signs are now escaped
+20030123: Sync with util-linux (2.11y)
+20010329: Bumped up version number to 1.1.2
+20010329: Sync with util-linux
+20010311: Bumped up version number to 1.1.1
+20010311: Fixed stupid compilation error if NLS not selected
+20000630: Bumped up version number to 1.1.0
 20000630: Ported the Native Language Support patches from util-linux
-          They are written by Arkadiusz Mi¶kiewicz <misiek@pld.ORG.PL>
+          They are written by Arkadiusz Mi¶kiewicz <misiek@pld.org.pl>
 20000627: Bumped up version number to 1.0.6
 20000627: A few manpage tweaks
 20000616: Introduced DESTDIR and directory creation in the Makefile.
