--- a/misc-utils/script.1
+++ b/misc-utils/script.1
@@ -40,6 +40,7 @@
 .Sh SYNOPSIS
 .Nm script
 .Op Fl a
+.Op Fl c Ar COMMAND
 .Op Fl f
 .Op Fl q
 .Op Fl t
@@ -69,6 +70,10 @@ Append the output to
 or
 .Pa typescript ,
 retaining the prior contents.
+.It Fl c Ar COMMAND
+Run the COMMAND rather than an interactive shell.
+This makes it easy for a script to capture the output of a program that
+behaves differently when its stdout is not a tty.
 .It Fl f
 Flush output after each write. This is nice for telecooperation:
 One person does `mkfifo foo; script -f foo' and another can
