--- a/mount/losetup.8
+++ b/mount/losetup.8
@@ -1,18 +1,15 @@
-.TH LOSETUP 8 "2003-07-01" "Linux" "MAINTENANCE COMMANDS"
+.TH LOSETUP 8 "Nov 24 1993" "Linux" "MAINTENANCE COMMANDS"
 .SH NAME
 losetup \- set up and control loop devices
 .SH SYNOPSIS
 .ad l
 .B losetup
 [
-.RB [ \-e | \-E ]
+.B \-e
 .I encryption
 ] [
 .B \-o
 .I offset
-] [
-.B \-p
-.I pfd
 ]
 .I loop_device file
 .br
@@ -28,41 +25,27 @@ is used to associate loop devices with regular files or block devices,
 to detach loop devices and to query the status of a loop device. If only the
 \fIloop_device\fP argument is given, the status of the corresponding loop
 device is shown.
-
-.SS "Encryption"
-It is possible to specify transfer functions (for encryption/decryption
-or other purposes) using one of the
-.B \-E
-and
-.B \-e
-options.
-There are two mechanisms to specify the desired encryption: by number
-and by name. If an encryption is specified by number then one
-has to make sure that the Linux kernel knows about the encryption with that
-number, probably by patching the kernel. Standard numbers that are
-always present are 0 (no encryption) and 1 (XOR encryption).
-When the cryptoloop module is loaded (or compiled in), it uses number 18.
-This cryptoloop module wil take the name of an arbitrary encryption type
-and finds the module that knows how to perform that encryption.
-(Thus, either one uses a number different from 18 with the
-.B \-E
-option, or one uses a name with the
-.B \-e
-option.)
 .SH OPTIONS
 .IP \fB\-d\fP
-Detach the file or device associated with the specified loop device.
-.IP "\fB\-E \fIencryption_type\fP"
-Enable data encryption with specified number.
-.IP "\fB\-e \fIencryption_name\fP"
-Enable data encryption with specified name.
+detach the file or device associated with the specified loop device.
+.IP "\fB\-e \fIencryption\fP"
+.RS
+enable data encryption. The following keywords are recognized:
+.IP \fBNONE\fP
+use no encryption (default).
+.PD 0
+.IP \fBXOR\fP
+use a simple XOR encryption.
+.IP \fBDES\fP
+use DES encryption. DES encryption is only available if the optional
+DES package has been added to the kernel. DES encryption uses an additional
+start value that is used to protect passwords against dictionary
+attacks.
+.PD
+.RE
 .IP "\fB\-o \fIoffset\fP"
-The data start is moved \fIoffset\fP bytes into the specified file or
+the data start is moved \fIoffset\fP bytes into the specified file or
 device.
-.IP "\fB\-p \fInum\fP"
-Read the passphrase from file descriptor with number
-.I num
-instead of from the terminal.
 .SH RETURN VALUE
 .B losetup
 returns 0 on success, nonzero on failure. When
@@ -74,7 +57,7 @@ from determining the status of the device.
 
 .SH FILES
 .nf
-/dev/loop0, /dev/loop1, ...   loop devices (major=7)
+/dev/loop0,/dev/loop1,...   loop devices (major=7)
 .fi
 .SH EXAMPLE
 If you are using the loadable module you must have the module loaded
@@ -82,23 +65,18 @@ first with the command
 .IP
 # insmod loop.o
 .LP
-Maybe also encryption modules are needed.
-.IP
-# insmod des.o
-# insmod cryptoloop.o
-.LP
 The following commands can be used as an example of using the loop device.
 .nf
 .IP
-# dd if=/dev/zero of=/file bs=1k count=100
-# losetup -e des /dev/loop0 /file
+dd if=/dev/zero of=/file bs=1k count=100
+losetup -e des /dev/loop0 /file
 Password:
 Init (up to 16 hex digits):
-# mkfs -t ext2 /dev/loop0 100
-# mount -t ext2 /dev/loop0 /mnt
+mkfs -t ext2 /dev/loop0 100
+mount -t ext2 /dev/loop0 /mnt
  ...
-# umount /dev/loop0
-# losetup -d /dev/loop0
+umount /dev/loop0
+losetup -d /dev/loop0
 .fi
 .LP
 If you are using the loadable module you may remove the module with
@@ -109,8 +87,8 @@ the command
 .fi
 .SH RESTRICTION
 DES encryption is painfully slow. On the other hand, XOR is terribly weak.
-.\" .SH AUTHORS
-.\" .nf
-.\" Original version: Theodore Ts'o <tytso@athena.mit.edu>
-.\" Original DES by: Eric Young <eay@psych.psy.uq.oz.au>
-.\" .fi
+.SH AUTHORS
+.nf
+Original version: Theodore Ts'o <tytso@athena.mit.edu>
+Original DES by: Eric Young <eay@psych.psy.uq.oz.au>
+.fi
