--- a/misc-utils/setterm.1
+++ b/misc-utils/setterm.1
@@ -111,7 +111,8 @@ reverse).
 Turns underline mode on or off (see \fB\-ulcolor\fP).
 .TP
 .BR \-store " (virtual consoles only)"
-Stores the terminal's current rendering options as the default values.
+Stores the terminal's current rendering options (foreground and
+background colors) as the values to be used at reset-to-default.
 .TP
 .BR \-clear " [" all ]
 Clears the screen and "homes" the cursor, as
