--- a/sys-utils/readprofile.1
+++ b/sys-utils/readprofile.1
@@ -34,8 +34,8 @@ Available command line options are the following:
 Specify a mapfile, which by default is
 .B /usr/src/linux/System.map.
 You should specify the map file on cmdline if your current kernel isn't the
-last one you compiled. If the name of the map file ends with `.gz' it
-is decompressed on the fly.
+last one you compiled, or if you keep System.map elsewhere. If the name of
+the map file ends with `.gz' it is decompressed on the fly.
 
 .TP
 .RB -p " pro-file"
