--- a/text-utils/pg.1
+++ b/text-utils/pg.1
@@ -1,19 +1,19 @@
-.\" @(#)pg.1	1.12 (gritter) 3/12/03
-.TH PG 1 "2003-03-12" "Gunnar Ritter" "User Commands"
+.\" @(#)pg.1	1.7 (gritter) 4/25/01
+.TH PG 1 "2001-04-25" "Gunnar Ritter" "User Commands"
 .SH NAME
 pg \- browse pagewise through text files
 .SH SYNOPSIS
 .B pg
 [
-.BI \- number
+.I \-number
 ] [
 .BI \-p \ string
 ] [
 .B \-cefnrs
 ] [
-.BI + line
+.I +line
 ] [
-.BI +/ pattern /
+.I +/pattern/
 ] [ file . . . ]
 .SH DESCRIPTION
 .I Pg
@@ -76,7 +76,7 @@ If
 .I string
 contains
 .I %d
-, its first occurrence is replaced by the number of the current page.
+, its first occurence is replaced by the number of the current page.
 .TP
 .B \-r
 Disallow the shell escape.
@@ -91,7 +91,7 @@ if the terminfo entry for the terminal provides this capability.
 Start at the given line.
 .TP
 .BI +/ pattern /
-Start at the line containing the basic regular expression
+Start at the line containing the Basic Regular Expression
 .I pattern
 given.
 .SH USAGE
@@ -137,7 +137,7 @@ Advance to the last line of the input file.
 .TP
 .IB i / pattern /
 Search forward until the first or the \fIi\fR-th
-occurrence of the basic regular expression 
+occurence of the Basic Regular Expression 
 .I pattern
 is found. The search starts
 after the current page and stops at the end of the file. No wrap-around is
@@ -147,7 +147,7 @@ must be a positive number.
 .TP
 \fIi\fR\fB?\fR\fIpattern\fR\fB?\fR or \fIi\fR\fB^\fR\fIpattern\fR\fB^\fR
 Search backward until the first or the \fIi\fR-th
-occurrence of the basic regular expression
+occurence of the Basic Regular Expression
 .I pattern
 is found. The search starts
 before the current page and stops at the beginning of the file.
