--- a/misc-utils/script.1
+++ b/misc-utils/script.1
@@ -130,7 +130,7 @@ is assumed. (Most shells set this variable automatically).
 (for the
 .Em history
 mechanism),
-.Xr replay 1 .
+.Xr scriptreplay 1 .
 .Sh HISTORY
 The
 .Nm script
