--- a/misc-utils/scriptreplay.1
+++ b/misc-utils/scriptreplay.1
@@ -141,10 +141,10 @@
 .TH REPLAY 1 "perl v5.6.0" "2001-09-03" "User Contributed Perl Documentation"
 .UC
 .SH "NAME"
-replay \- play back typescripts, using timing information
+scriptreplay \- play back typescripts, using timing information
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-replay timingfile [typescript [divisor]]
+scriptreplay timingfile [typescript [divisor]]
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 This program replays a typescript, using timing information to ensure that
@@ -169,7 +169,7 @@ specifying a divisor of 2 makes the script be replayed twice as fast.
 \& <etc, etc>
 \& % exit
 \& Script done, file is typescript
-\& % replay timingfile
+\& % scriptreplay timingfile
 .Ve
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
